examples/variables4.lox
a + b = c; // error: Invalid assignment target.
